src/main/java/semantic/abstractSintaxTree/test/passing/ifElseReturn.ru
struct A {}
impl A {
    .() {}
    fn function() -> Int {
        if (true) {
            ret 1;
        } else {
            ret 2;
        }
    }
}
start {}

