src/main/java/semantic/abstractSintaxTree/test/failing/returnInWhile.ru
/? MissingReturnException
struct A {}
impl A{
    .(){

    }

    fn loop() -> Int{
        Int a;
        while (true) {
           (++a);

            ret a;
        }
    }
}

start{}